2008-10-14  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-background-parser.c (ccss_block_parse_background):
	* ccss/ccss-background.c:
	* ccss/ccss-block.c (ccss_block_dump):
	* ccss/ccss-border.c:
	* ccss/ccss-color.c:
	* ccss/ccss-style.c (ccss_style_dump):
	Reinstate `dump' functions after change of internal representation.

2008-10-14  Thomas Wood  <thomas@linux.intel.com>

	* ccss/ccss-node.h:
	* doc/tmpl/node.sgml:
	Re-arrange ccss-node.h to fix gtk-doc not following forward declerations.

2008-10-14  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-border.h: remove unused field.

2008-10-14  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-border.h:
	* ccss/ccss-property.c (ccss_property_init),
	(ccss_property_shutdown),
	(ccss_property_register_conversion_function),
	(ccss_property_convert):
	* ccss/ccss-property.h:
	* ccss/ccss-style.c (convert_background_attachment),
	(convert_background_image), (convert_background_position),
	(convert_background_repeat), (convert_background_size),
	(convert_border_style), (convert_border_width),
	(convert_border_radius), (convert_color), (ccss_style_init),
	(ccss_style_shutdown), (ccss_style_get_double),
	(ccss_style_get_string):
	* ccss/ccss-style.h:
	* ccss/ccss.c (ccss_init), (ccss_shutdown):
	* ccss/ccss.sym.in:
	* doc/ccss-sections.txt:
	* doc/tmpl/style.sgml:
	* examples/example-1.c (main):
	Property-query API for ccss_style_t.

2008-10-13  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-block.c (ccss_block_new):
	* ccss/ccss-block.h:
	* ccss/ccss-property.c (ccss_property_background_attachment),
	(ccss_property_background_color), (ccss_property_background_image),
	(ccss_property_background_position),
	(ccss_property_background_repeat), (ccss_property_background_size),
	(ccss_property_border_bottom_color),
	(ccss_property_border_bottom_style),
	(ccss_property_border_bottom_width),
	(ccss_property_border_left_color),
	(ccss_property_border_left_style),
	(ccss_property_border_left_width),